--- a/src/styles/fonts.sass
+++ b/src/styles/fonts.sass
@@ -4,25 +4,19 @@
 
 @font-face
   font-family: 'BloggerSans'
-  src:
-    url('fonts/blogger-sans/BloggerSans.woff') format('woff'),
-    url('fonts/blogger-sans/BloggerSans.woff2') format('woff2')
+  src: url('fonts/blogger-sans/BloggerSans.woff') format('woff'), url('fonts/blogger-sans/BloggerSans.woff2') format('woff2')
   font-style: normal
   font-weight: normal
   text-rendering: optimizeLegibility
 
 @font-face
   font-family: 'Vivaldi'
-  src: 
-    url('fonts/vivaldi/VivaldiDCL.woff') format('woff'),
-    url('fonts/vivaldi/VivaldiDCL.woff2')  format('woff2')
+  src: url('fonts/vivaldi/VivaldiDCL.woff') format('woff'), url('fonts/vivaldi/VivaldiDCL.woff2')  format('woff2')
   font-weight: normal
   font-style: normal
 
 @font-face
   font-family: 'Futura'
-  src:
-    url('fonts/futura-pt/FuturaPT-Book.woff') format('woff'),
-    url('fonts/futura-pt/FuturaPT-Book.woff2') format('woff2')
+  src: url('fonts/futura-pt/FuturaPT-Book.woff') format('woff'), url('fonts/futura-pt/FuturaPT-Book.woff2') format('woff2')
   font-weight: normal
   font-style: normal
