big escalating project

--- a/src/styles/fonts.sass
+++ b/src/styles/fonts.sass
@@ -20,3 +20,15 @@
   src: url('fonts/futura-pt/FuturaPT-Book.woff') format('woff'), url('fonts/futura-pt/FuturaPT-Book.woff2') format('woff2')
   font-weight: normal
   font-style: normal
+
+@font-face
+  font-family: 'Futura'
+  src: url('fonts/futura-pt/FuturaPT-Light.woff') format('woff'), url('fonts/futura-pt/FuturaPT-Light.woff2') format('woff2')
+  font-weight: 200
+  font-style: normal
+
+@font-face
+  font-family: 'Academic'
+  src: url('fonts/academic/academy.woff') format('woff'), url('fonts/academic/academy.woff2') format('woff2')
+  font-weight: normal
+  font-style: normal
